--- a/GroceryFinder/GroceryFinder.csproj
+++ b/GroceryFinder/GroceryFinder.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.2.1" />
+    <!-- <PackageReference Include="Nswag.AspNetCore" Version="13.3.0" /> -->
   </ItemGroup>
 
 </Project>
